@@ -160,6 +160,7 @@ Chronological list of authors
   - Orion Cohen
   - Dimitrios Papageorgiou
   - Hannah Pollak
+  - Estefania Barreto-Ojeda
 
 External code
 -------------
